--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MONGODB_URL = mongodb+srv://sazzad:hadith@cluster0.6vnqx.mongodb.net/registration?retryWrites=true&w=majority
 
-CLIENT_URL = https://jannatersathi.herokuapp.com
+CLIENT_URL = https://www.jannatersathi.com
 
 ACCESS_TOKEN_SECRET = youraccesstokensecret
 REFRESH_TOKEN_SECRET = yourrefreshtokensecret
