--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
+    "react-helmet-async": "^1.2.2",
     "react-icons": "^4.3.1",
     "react-paginate": "^8.0.0",
     "react-redux": "^7.2.2",
