--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "v-network",
+  "name": "jannatersathi",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -31,6 +31,7 @@
     "node-fetch": "2.0",
     "nodemailer": "^6.7.2",
     "peer": "^0.6.1",
+    "react-helmet-async": "^1.2.2",
     "socket.io": "^3.1.2"
   },
   "devDependencies": {
