--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "cacheAjaxRequests": true,
     "inlineCss": true,
     "http2PushManifest": true,
-    "puppeteerArgs": ["--no-sandbox", "--disable-setuid-sandbox"]
+    "puppeteerArgs": [
+      "--no-sandbox",
+      "--disable-setuid-sandbox"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -39,6 +42,7 @@
     "nodemailer": "^6.7.2",
     "peer": "^0.6.1",
     "react-helmet-async": "^1.2.2",
+    "react-snap": "^1.23.0",
     "socket.io": "^3.1.2"
   },
   "devDependencies": {
