--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.6.2",
     "axios": "^0.21.1",
     "bootstrap-icons": "^1.7.0",
+    "js-file-download": "^0.4.12",
     "moment": "^2.29.1",
     "peerjs": "^1.3.2",
     "react": "^17.0.1",
