--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "js-file-download": "^0.4.12",
     "moment": "^2.29.1",
     "peerjs": "^1.3.2",
+    "prop-types": "^15.8.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
