--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
     "axios": "^0.21.1",
+    "banglanumber-to-englishnumber": "^1.0.1",
     "bootstrap-icons": "^1.7.0",
     "js-file-download": "^0.4.12",
     "moment": "^2.29.1",
