--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,10 @@
       "react-app/jest"
     ]
   },
+  "engines": {
+    "npm": "8.5.0",
+    "node": "16.14.2"
+ },
   "browserslist": {
     "production": [
       ">0.2%",
