--- a/package.json
+++ b/package.json
@@ -36,5 +36,9 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
-  }
+  },
+  "engines": {
+    "npm": "8.5.0",
+    "node": "16.14.2"
+ }
 }
