--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "client-install": "cd client && npm install --legacy-peer-deps",
     "install-all": "concurrently \"npm run server-install\" \"npm run client-install\" ",
     "dev": "concurrently \"npm run server\" \"npm run client\" ",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "heroku-postbuild": "cd client && npm install --legacy-peer-deps && npm run build"
   },
   "keywords": [],
   "author": "",
